<resources>
    <string name="add_co_driver">Add Co-Driver</string>
    <string name="allow">ALLOW</string>
    <string name="allowed">ALLOWED</string>
    <string name="app_name">ELD</string>
    <string name="apply">Apply</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="break_in">Break in</string>
    <string name="canada_rules">Canada Rules</string>
    <string name="cancel">Cancel</string>
    <string name="certification_need">Certification need</string>
    <string name="certify_all_selected">Certify all selected</string>
    <string name="choose_date_time">Choose date and time</string>
    <string name="city_province">City (requires state/province)</string>
    <string name="co_driver">Co-Driver</string>
    <string name="comment_title">Comment(0/60)</string>
    <string name="comment_title_din">Comment(%s/60)</string>
    <string name="company">Company</string>
    <string name="company2">Company:</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="current_driver">Current driver</string>
    <string name="dot_inspect">DOT Inspect</string>
    <string name="driver_licence_hint">Driver licence here</string>
    <string name="driver_licence_number">Driver licence number</string>
    <string name="driving">Driving</string>
    <string name="driving_limit">Driving limit</string>
    <string name="duration">Duration:\n %s:%sh</string>
    <string name="duty_cycle">Duty Cycle</string>
    <string name="dvir">DVIR</string>
    <string name="email">Email</string>
    <string name="email_hint">Email here</string>
    <string name="end_time">End time</string>
    <string name="faq">FAQ</string>
    <string name="first_name">First name</string>
    <string name="first_name_hint">First name here</string>
    <string name="h_window">14h Window</string>
    <string name="input_data">Input data</string>
    <string name="insert_event">Insert event</string>
    <string name="json_error">Json parsing error</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "Bold, graphic, intentional.\n\n"
        "Material is the metaphor.\n\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "The foundational elements of print based design typography, grids, space, scale, color, "
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "interface that immerse the user in the experience.\n"
        "seams, divides space, and indicates moving parts.\n\n"
        "technologically advanced and open to imagination and magic.\n"
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "waypoints for the user.\n\n"
        "world, without breaking the rules of physics.\n"
    </string>
    <string name="last_name">Last name</string>
    <string name="last_name_hint">Last name here</string>
    <string name="license">License</string>
    <string name="loading">Загрузка</string>
    <string name="location">Location</string>
    <string name="location2">Location:</string>
    <string name="location_description">Location Description</string>
    <string name="location_desk">Allow to access your location</string>
    <string name="log">Log</string>
    <string name="login">Login</string>
    <string name="login2">Login:</string>
    <string name="login_hint">Login name here</string>
    <string name="login_name">Login name</string>
    <string name="logout">Logout</string>
    <string name="logout_ask">Are you sure you want to log out?</string>
    <string name="mc_number">MC Number</string>
    <string name="mc_number_hint">MC Number here</string>
    <string name="md">MD</string>
    <string name="menu">Menu</string>
    <string name="need_permissions_desk">Permissions are necessary for the correct work of the application and the performance of all functions. Push are not required permissions</string>
    <string name="need_permissions_title">Need permissions</string>
    <string name="network_error">network error</string>
    <string name="network_timeout_error">Timeout exception</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_desk">Get important notifications</string>
    <string name="odometer">Odometer</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="or">or</string>
    <string name="organization_name">Organization name</string>
    <string name="password">Password</string>
    <string name="password_hint">Password here</string>
    <string name="personal">Personal</string>
    <string name="records_certification">Records Certification</string>
    <string name="records_certification_desc">You can select and certify all days in list below:</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="rules">Rules</string>
    <string name="save">Save</string>
    <string name="select_a_menu_item_to_see_details">Select a menu item to see details</string>
    <string name="select_country">Select country</string>
    <string name="select_state">Select state</string>
    <string name="server_error">Server error</string>
    <string name="ship_doc_number">Shipping document number</string>
    <string name="sleeper_berth">Sleeper berth</string>
    <string name="start_time">Start time</string>
    <string name="state">State</string>
    <string name="state_province">State/province</string>
    <string name="swap_ask">Are you sure you want to swap the driver?</string>
    <string name="team_driving">Team driving</string>
    <string name="text_it_is_empty">It\'s empty</string>
    <string name="trailer_number">Trailer number</string>
    <string name="truck">Truck</string>
    <string name="truck_settings">Truck Settings</string>
    <string name="unknown_error">Unknown error</string>
    <string name="usdot_number">USDOT Number</string>
    <string name="usdot_number_hint">USDOT Number here</string>
    <string name="yes">Yes</string>
    <string name="usa_rules">USA Rules</string>
    <string name="list_of_events">List of events</string>
    <string name="failed">FALSE</string>
    <string name="passed">OK</string>
    <string name="read_guide">Read guide</string>
    <string name="data_transfer">Data transfer</string>
    <string name="transfer_method">Transfer method</string>
    <string name="type_comment_here">Type comment here</string>
    <string name="send">Send</string>
    <string name="sb">Sb</string>
    <string name="edit">Edit</string>
    <string name="drive">Drive</string>
    <string name="only_drivers_can_login">Only drivers can login</string>
    <string name="clear_signature">Clear</string>
    <string name="change_signature">Change</string>
    <string name="save_signature">Save</string>
    <string name="settings">Settings</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="personal_use">Personal use</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="event_status">Event status</string>
    <string name="date">Start date</string>

    <string-array name="countries">
        <item>Canada</item>
        <item>United states</item>
    </string-array>
    <string-array name="transfer_methods">
        <item>Web Service (FMCSA)</item>
        <item>Email to FMCSA</item>
    </string-array>
</resources>