<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:gravity="center_vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/first_name"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_user"
        android:drawablePadding="5dp"
        android:hint="@string/first_name_hint"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/last_name"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_user"
        android:drawablePadding="5dp"
        android:hint="@string/last_name_hint"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="@string/email_hint"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:hint="@string/password_hint"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirm_password"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />


</LinearLayout>