<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:gravity="center_vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization_name"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/organization_name"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_document"
        android:drawablePadding="5dp"
        android:hint="@string/organization_name"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usdot_number"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usdot_Number"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_document"
        android:drawablePadding="5dp"
        android:hint="@string/usdot_number_hint"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mc_number"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/mc_number"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_document"
        android:drawablePadding="5dp"
        android:hint="@string/mc_number_hint"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_licence_number"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/driver_licence"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_document"
        android:drawablePadding="5dp"
        android:hint="@string/driver_licence_hint"
        android:paddingStart="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />
</LinearLayout>