<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_sub_bkg"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/insert_event_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_description"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back_left"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

        <com.pieaksoft.event.consumer.android.views.FloatingTitleEditText
            android:id="@+id/state_province"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:hint="@string/input_data"
            app:layout_constraintEnd_toStartOf="@+id/city_province"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:title="@string/state_province" />

        <com.pieaksoft.event.consumer.android.views.FloatingTitleEditText
            android:id="@+id/city_province"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:hint="@string/input_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/state_province"
            app:layout_constraintTop_toTopOf="@+id/state_province"
            app:title="@string/city_province" />

        <com.pieaksoft.event.consumer.android.views.FloatingTitleEditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:commentField="true"
            app:hint="@string/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_province"
            app:maxElements="60"
            app:minimumHeight="@dimen/_150dp"
            app:title="@string/comment_title" />

        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/save"
            app:layout_constraintTop_toBottomOf="@id/comment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/round_order_button"
            android:enabled="true"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spacer"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".3421" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>