<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/menu_sub_bkg"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="32dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".3164"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:constraint_referenced_ids="title, event_off_btn, event_sleep_btn, event_driving_btn, event_on_btn, event_cancel_btn"
            app:flow_horizontalAlign="center"
            app:flow_horizontalStyle="packed"
            app:flow_verticalAlign="top"
            app:flow_verticalGap="16dp"
            app:flow_verticalStyle="spread_inside"
            app:flow_wrapMode="aligned"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/insert_event"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_off_btn"
            style="@style/InsertEventButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/off"
            app:backgroundTint="@color/red" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_sleep_btn"
            style="@style/InsertEventButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleeper_berth"
            app:backgroundTint="@color/blue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_driving_btn"
            style="@style/InsertEventButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driving"
            app:backgroundTint="@color/green2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_on_btn"
            style="@style/InsertEventButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on"
            app:backgroundTint="@color/orange" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_cancel_btn"
            style="@style/InsertEventButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:backgroundTint="@color/secondary_gray" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>