<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center_vertical">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/location"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        style="@style/ExposedDropdownMenu"
        app:endIconTint="@color/white">

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/location_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/selector_text_color"
        android:textSize="16sp"
        android:inputType="none"
        android:focusableInTouchMode="false"
        android:text="@string/select_country"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/state"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        style="@style/ExposedDropdownMenu"
        app:endIconTint="@color/white">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/state_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/selector_text_color"
            android:textSize="16sp"
            android:inputType="none"
            android:text="@string/select_state"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>